# snails-contracts

./: Cargo.toml  README.md  build_local.sh
res/: snails_exchange.wasm  snails_farming.wasm
sim/: Cargo.toml  simulation.py
sim/src/: bigint.rs  lib.rs
snails_exchange/: Cargo.toml  README.md  build_test.sh  deploy_snailswap_2_coins.sh  deploy_snailswap_3_coins.sh
snails_exchange/proptest-regressions/: snails.txt
snails_exchange/src/: README.md  account.rs  error.rs  fees.rs  lib.rs  multi_fungible_token.rs  pool.rs  simple_pool.rs  snails.rs  storage_impl.rs  token_receiver.rs  utils.rs  views.rs
snails_exchange/tests/: test_direct_swap.rs
snails_exchange/tests/common/: utils.rs
snails_farming/: Cargo.toml  README.md  build_local.sh  build_test.sh  deploy_farm.sh
snails_farming/src/: README.md  actions_of_farm.rs  actions_of_reward.rs  actions_of_seed.rs  errors.rs  farm.rs  farm_seed.rs  farmer.rs  lib.rs  owner.rs  simple_farm.rs  storage_impl.rs  token_receiver.rs  utils.rs  view.rs
test-token/: Cargo.toml
