[package]
name = "snails_farming"
version = "0.1.0"
authors = ["SnailsFinance <john.snails.fi@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "0.9.0", default-features = false }
near-sdk = "4.0.0-pre.4"
near-contract-standards = "4.0.0-pre.4"

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.4"
